# CSCI-E-108

./: .gitignore  01_PitfallsInDataMining.ipynb  pyproject.toml
notebooks/: 01_PitfallsInDataMining.ipynb  03_EfficinetSimilaritySearch.ipynb  04_WebSearching.ipynb  05_Recommenders.ipynb  06_SocialNetworkAnalysis.ipynb  07_ClusterModels.ipynb  09_AssociationModels.ipynb
