[tool.poetry]
name = "csci-e-108"
version = "0.1.0"
description = ""
authors = ["Bill Henderson <william.henderson@verizon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
